# Apoapsis-Harness-

./: .gitignore  AGENTS.md  HANDOFF.md  LICENSE.txt  NEXT_STEPS.md  OPEN_APOAPSIS.cmd  README.md  START_APOAPSIS.cmd  STOP_APOAPSIS.cmd  pyproject.toml
.claude/: settings.local.json
docs/: architecture-explained.md  product-design-handoff.md  research-mode.md
docs/adr/: 0001-mvp-deterministic-substrate.md  0002-frontier-vertical-slice.md  0003-local-research-mode.md  0004-native-ollama-frontier.md  0005-bounded-coding-agent-loop.md  0006-deterministic-frontier-escalation.md  0007-apoapsis-namespace.md  (+42 more)
src/sol/: config.py  (+2 more)
tests/: __init__.py  architect_helpers.py  fakes.py  helpers.py  research_fakes.py  test_acceptance_coverage.py  test_agent_loop.py  test_app_js_regression.py  test_architect_cli.py  test_architect_slice.py  test_architect_slice_ui.py  test_architect_store.py  test_architect_validation.py  test_cli.py  test_context_compiler.py  test_context_measurement.py  test_context_measurement_integration.py  test_diagnostic_probe.py  test_discovery.py  test_discovery_ui.py  test_docker_backend.py  test_doctor.py  test_evaluation.py  test_execution_authorization.py  test_execution_backend.py  test_execution_operations.py  test_execution_ui.py  test_intake.py  test_intake_cli.py  test_intake_ui.py  test_launcher.py  test_manual_frontier.py  test_manual_frontier_ui.py  test_operation_lease.py  test_operator_lifecycle.py  test_patches.py  test_planning_evaluation.py  test_provider_and_specification.py  test_repository_and_worktree.py  test_research_integration.py  (+17 more)
(+245 files in other folders)
