[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sol-harness"
version = "0.4.0"
description = "Local-first deterministic substrate for verified AI coding tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10,<3",
]

[project.scripts]
sol = "sol.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["sol"]
