[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "apoapsis-harness"
version = "0.7.0"
description = "Local-first deterministic substrate for verified AI coding tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10,<3",
]

[project.scripts]
apoapsis = "apoapsis.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["apoapsis"]
